--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=psample
-sonar.projectName=PSample
+sonar.projectKey=psampleA
+sonar.projectName=PSampleA
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
